# thermal-gpu-balancer

./: .gitignore  Blog.md  ClusterOps_GRPO_Training.ipynb  HUGGING_FACE_POST.md  README.md  __init__.py  baseline.py  client.py  clusterops_gym_env.py  expert_benchmark_report.md  heuristic_test.py  inference.py  openenv.yaml  parsed_faqs.txt  parsed_guide.txt  parsed_pdf.txt  parsed_resources.txt  pyproject.toml  run_groq_test.py  scenario_benchmark_02_spatial_bleed.md  test_env.py  test_environment.py  train_grpo.py  train_local.py  winners_guide.md
agents/: client.py  inference.py  smart_agent.py
clusterops/: Dockerfile.hf  README.md  __init__.py  baseline.py  environment.py  generate_plots.py  groq_benchmark_report.md  gym_env.py  inference.py  models.py  openenv.yaml  pyproject.toml  run_groq_test.py  smart_agent.py  train_grpo.py
clusterops/server/: Dockerfile  app.py  clusterops_environment.py  requirements.txt
clusterops/tests/: __init__.py  test_clusterops.py  test_edge_cases.py
openenv_clusterops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
server/: __init__.py  app.py  clusterops_environment.py  requirements.txt
server/static/: index.html
tests/: test_clusterops.py  test_edge_cases.py
tools/: generate_plots.py  run_groq_test.py  test_env_minimal.py  test_environment_old.py
training/: ClusterOps_GRPO_Training.ipynb  train_grpo.py
