# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-clusterops"
version = "0.1.0"
description = "Clusterops environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    "openenv-core[core]>=0.2.2",
    # Server dependencies
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "requests>=2.31.0",
    # Gym wrapper (clusterops_gym_env.py)
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    # Training / plotting (train_grpo.py)
    "matplotlib>=3.7.0",
    "stable-baselines3>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",  # for async FastAPI test client
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m clusterops.server.app
server = "clusterops.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["clusterops", "clusterops.server"]
package-dir = { "clusterops" = ".", "clusterops.server" = "server" }